[package]
name = "tercen-rs"
version = "0.1.0"
edition = "2021"
authors = ["Tercen"]
description = "Tercen SDK for Rust — gRPC client, data streaming, operator context, and more"
license = "MIT"

[lib]
name = "tercen_rs"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "time"] }
tokio-stream = "0.1"
futures = "0.3"

# gRPC and Protocol Buffers
tonic = { version = "0.14", features = ["transport", "tls-native-roots"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"

# Error handling
thiserror = "1.0"

# Data parsing - TSON format from Tercen
rustson = { git = "https://github.com/tercen/rustson", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
polars = { version = "0.51", default-features = false, features = ["lazy", "dtype-full"] }

# Base64 encoding
base64 = "0.22"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
tonic-prost-build = "0.14"
